--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/component_yingli.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/component_yingli.html
@@ -15,7 +15,7 @@
 <div class="navbar">
   <a href="index.html" class="nav-brand"></a>
   <nav class="nav-menu">
-    <a href="research.html">Research</a>
+    <a href="old_research.html">Research</a>
     <a href="ideation.html" class="active">Ideation</a>
     <a href="design.html" >Design</a>
     <a href="about.html">About</a>
@@ -35,6 +35,7 @@
   <img src="images/ideation/banner-left.svg" class="bg left">
 </div>
 
+<!--card-->
 <div class="section">
     <div class="container">
       <div class="card card-style1">
@@ -52,6 +53,7 @@
   </div>
 </div>
 
+<!--arrows-->
 <div class="section">
   <div class="container flex-h even-wrapper">
     <div class="flex-h">
@@ -83,6 +85,7 @@
   </div>
 </div>
 
+<!--persona-->
 <div class="section">
   <div class="container flex-h" >
     <img src="images/about/nina.png" class="flexblock-headshot image left"/>
@@ -102,17 +105,8 @@
     </div>
   </div>
 
-  <div class="section bg-light-blue">
-    <div class="smaller-section container flex-h">
-      <img src="images/about/nina.png" class="flexblock-headshot image left"/>
-      <div class="quote-bubble bg-white">
-        <div class="card-title">Customers</div>
-        <div class="flex-h">
-            <div class="b3">Etiam porta sem malesuada magna mollis euismod. Donec ullamcorper nulla non metus auctor fringilla. Cum sociis natoque penatibus </div>
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="section bg-light-blue">
+c  </div>
 
 <!-- Footer -->
 <div class="footer-wrapper">
