--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/concept.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/concept.html
@@ -32,7 +32,7 @@
       </ul>
       <ul class="right hide-on-med-and-down">
         <li><a href="index.html" class="nav-link w-nav-link">Home</a></li>
-        <li><a href="research.html" class="nav-link w-nav-link">Research</a></li>
+        <li><a href="old_research.html" class="nav-link w-nav-link">Research</a></li>
         <li><a href="concept.html" class="nav-link w-nav-link w--current">Concepts</a></li>
         <li><a href="about.html" class="nav-link w-nav-link">About</a></li>
       </ul>
