--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
@@ -18,7 +18,7 @@
 <div class="navbar homepage">
     <a href="index.html" class="nav-brand"></a>
     <nav class="nav-menu">
-        <a href="research.html" >Research</a>
+        <a href="old_research.html" >Research</a>
         <a href="ideation.html" >Ideation</a>
         <a href="design.html" >Design</a>
         <a href="about.html">About</a>
@@ -92,7 +92,7 @@
                 <img src="images/homepage/3-process-icon1.svg" alt="" class="icon">
                 <div class="card-title red-text">Research Phase</div>
                 <div class="card-text">Our subject and generative research focused on understanding the financial sphere and the complexity of trader’s lives, particularly in institutional trading.</div>
-                <a data-aos="fade-up" href="research.html" class="button-solid red-bg">Read More</a>
+                <a data-aos="fade-up" href="old_research.html" class="button-solid red-bg">Read More</a>
             </div>
             <div class="w-col-4 card hp-process-card-wrapper">
                     <img src="images/homepage/3-process-icon2.svg" alt="" class="icon">
