--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/component_qian.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/component_qian.html
@@ -16,7 +16,7 @@
 <div class="navbar">
     <a href="index.html" class="nav-brand"></a>
     <nav class="nav-menu">
-        <a href="research.html" >Research</a>
+        <a href="old_research.html" >Research</a>
         <a href="ideation.html" >Ideation</a>
         <a href="design.html" class="active">Design</a>
         <a href="about.html">About</a>
