fixed navbar title

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/research.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/research.html
@@ -11,6 +11,7 @@
     <link href="images/Utility/trufflin_logo.png" rel="shortcut icon" type="image/x-icon">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="js/summer.js" type="text/javascript"></script>
+    <script src="js/project.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -27,6 +28,29 @@
         <div class="w-icon-nav-menu"></div>
     </div>
 </div>
+<div class="inpage-nav">
+    <div class="line"></div>
+    <a href="#sec-overview" class="active">
+        <div class="dot"></div>
+        <div class="nav-section">Overview</div>
+    </a>
+    <a href="#sec-user">
+        <div class="dot"></div>
+        <div class="nav-section">User</div>
+    </a>
+    <a href="#sec-product">
+        <div class="dot"></div>
+        <div class="nav-section">Product</div>
+    </a>
+    <a href="#sec-user-product">
+        <div class="dot"></div>
+        <div class="nav-section">User+Product</div>
+    </a>
+    <a href="#sec-takeaways">
+        <div class="dot"></div>
+        <div class="nav-section">Takeaways</div>
+    </a>
+</div>
 
 <!-- Banner -->
 <div class="banner section">
@@ -39,7 +63,7 @@
 </div>
 
 <!--Overview-->
-<div class="section bg-light-purple">
+<div id="sec-overview" class="section bg-light-purple">
     <div class="container">
         <div class="section-title">Overview</div>
         <div class="section-title-line red-bg"></div>
@@ -87,7 +111,7 @@
 </div>
 
 <!--User-->
-<div class="section">
+<div id="sec-user" class="section">
     <div class="container">
         <div class="section-title">Users</div>
         <div class="section-title-line red-bg"></div>
@@ -358,7 +382,7 @@
 </div>
 
 <!--Product-->
-<div class="section bg-light-purple">
+<div id="sec-product" class="section bg-light-purple">
     <div class="container">
         <div class="section-title">Product</div>
         <div class="section-title-line red-bg"></div>
@@ -547,7 +571,7 @@
 </div>
 
 <!--Product+User-->
-<div class="section">
+<div id="sec-user-product" class="section">
     <div class="container">
         <div class="section-title">Users + Product</div>
         <div class="section-title-line red-bg"></div>
@@ -723,7 +747,7 @@
 </div>
 
 <!--Takeaways-->
-<div class="section bg-light-purple">
+<div id="sec-takeaways" class="section bg-light-purple">
     <div class="container">
         <div class="section-title">Takeaways</div>
         <div class="section-title-line red-bg"></div>
@@ -751,7 +775,6 @@
         <img class="b1 img-button" src="images/buttons/button-ideation.svg" alt="Trufflin Logo">
     </div>
 </div>
-
 
 <!-- Footer -->
 <div class="footer-wrapper">
