--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/research.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/research.html
@@ -18,7 +18,7 @@
 <div class="navbar">
     <a href="index.html" class="nav-brand"></a>
     <nav class="nav-menu">
-        <a href="old_research.html" class="active">Research</a>
+        <a href="research.html" class="active">Research</a>
         <a href="ideation.html" >Ideation</a>
         <a href="design.html" >Design</a>
         <a href="about.html">About</a>
