--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
@@ -15,7 +15,7 @@
 <div class="navbar">
   <a href="index.html" class="nav-brand"></a>
   <nav class="nav-menu">
-    <a href="old_research.html" >Research</a>
+    <a href="research.html" >Research</a>
     <a href="ideation.html" >Ideation</a>
     <a href="design.html" >Design</a>
     <a href="about.html" class="active">About</a>
