--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/research.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/research.html
@@ -776,6 +776,15 @@
     </div>
 </div>
 
+
+<!-- Expanded Image-->
+<div id="expanded-img-wrapper">
+    <img id="expanded-img">
+</div>
+<script>
+    setup_expandable_img();
+</script>
+
 <!-- Footer -->
 <div class="footer-wrapper">
     <p class="">Copyright © 2019 Designed and Coded by</p>
