draft for ideation page

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/component_june.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/component_june.html
@@ -51,7 +51,7 @@
       <div class="tab-content">
         <div>
           <h2>Observation 1</h2>
-          <ul class="red-bullet">
+          <ul class="tab-bullet">
             <li>Etiam porta sem malesuada magna mollis euismod.</li>
             <li>onec ullamcorper nulla non metus auctor fringilla.</li>
             <li>Cum sociis natoque penatibus</li>
@@ -59,7 +59,7 @@
         </div>
         <div>
           <h2>Observation 2</h2>
-          <ul class="red-bullet">
+          <ul class="tab-bullet">
             <li>Etiam porta sem malesuada magna mollis euismod.</li>
             <li>onec ullamcorper nulla non metus auctor fringilla.</li>
             <li>Cum sociis natoque penatibus</li>
@@ -72,7 +72,7 @@
       <div class="tab-content">
         <div>
           <h2>Observation 3</h2>
-          <ul class="red-bullet">
+          <ul class="tab-bullet">
             <li>Etiam porta sem malesuada magna mollis euismod.</li>
             <li>onec ullamcorper nulla non metus auctor fringilla.</li>
             <li>Cum sociis natoque penatibus</li>
@@ -80,7 +80,7 @@
         </div>
         <div>
           <h2>Observation 4</h2>
-          <ul class="red-bullet">
+          <ul class="tab-bullet">
             <li>Etiam porta sem malesuada magna mollis euismod.</li>
             <li>onec ullamcorper nulla non metus auctor fringilla.</li>
             <li>Cum sociis natoque penatibus</li>
@@ -93,7 +93,7 @@
       <div class="tab-content">
         <div>
           <h2>Observation 5</h2>
-          <ul class="red-bullet">
+          <ul class="tab-bullet">
             <li>Etiam porta sem malesuada magna mollis euismod.</li>
             <li>onec ullamcorper nulla non metus auctor fringilla.</li>
             <li>Cum sociis natoque penatibus</li>
@@ -101,7 +101,7 @@
         </div>
         <div>
           <h2>Observation 6</h2>
-          <ul class="red-bullet">
+          <ul class="tab-bullet">
             <li>Etiam porta sem malesuada magna mollis euismod.</li>
             <li>onec ullamcorper nulla non metus auctor fringilla.</li>
             <li>Cum sociis natoque penatibus</li>
