add new files for design page

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
@@ -24,7 +24,7 @@
         <a href="about.html">About</a>
         <a href="glossary.html" >Glossary</a>
     </nav>
-    <div class="menu-button w-nav-button">
+    <!-- <div class="menu-button w-nav-button">
         <div class="w-icon-nav-menu"></div>
     </div>
     <div id="menu-toggle">
@@ -40,7 +40,7 @@
         <a href="#"><li>Glossary</li></a>
       </ul>
     </div>
-  </div>
+  </div> -->
 </div>
 <div class="inpage-nav">
     <div class="line"></div>
@@ -69,11 +69,11 @@
 <!-- Banner -->
 <div class="banner section">
     <div class="container">
-        <div class="page-title red-text">Research</div>
+        <div class="page-title red-text">Design</div>
         <div class="banner-paragraph">Our team onboarded into the financial sphere using generative research. We studied the traders' day and their work environment, including interactions with software. From this work, we understood traders' needs and desires from Liquidnet's software.</div>
     </div>
-    <img src="images/research/right.svg" class="bg right">
-    <img src="images/research/left.svg" class="bg left">
+    <img src="images/design/right.svg" class="bg right">
+    <img src="images/design/left.svg" class="bg left">
 </div>
 
 <!--Overview-->
@@ -118,11 +118,11 @@
                 </div>
             </div>
             <div class="container flex-h even-wrapper">
-                <div class="arrow-text-ipad h3 text-center">Users</div>
+                <div class="arrow-text-ipad h3 text-center">Research Through Design</div>
                 <div class="text-box">Many trader types emerged as we studied trader's priorities and metrics for success, with varying Liquidnet usage.</div>
-                <div class="arrow-text-ipad h3 text-center">Product</div>
+                <div class="arrow-text-ipad h3 text-center">User Testing</div>
                 <div class="text-box">We examined Liquidnet 5 to understand its current use. Different styles of usage emerged across user types.</div>
-                <div class="arrow-text-ipad h3 text-center">User + Product</div>
+                <div class="arrow-text-ipad h3 text-center">Final Product</div>
                 <div class="text-box">The user types found earlier matched different interactions with Liquidnet's front-end and back-end software.</div>
             </div>
         </div>
@@ -132,7 +132,7 @@
 <!--User-->
 <div id="sec-user" class="section">
     <div class="container">
-        <div class="section-title">Users</div>
+        <div class="section-title">Research Through Design</div>
         <div class="section-title-line red-bg"></div>
         <div class="smaller-section">Traders are core to Liquidnet's success - they execute trades, they analyze research, and they develop algorithms, all benefitting Liquidnet. Understanding trader’s goals and needs tells us where Liquidnet should target traders.</div>
         <!--persona-->
