--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
@@ -7,8 +7,10 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/shared.css" rel="stylesheet" type="text/css">
+  <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600&display=swap" rel="stylesheet">
   <link href="images/Utility/trufflin_logo.png" rel="shortcut icon" type="image/x-icon">
+  <script src="js/shared.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -21,6 +23,7 @@
     <a href="about.html" class="active">About</a>
     <a href="glossary.html" >Glossary</a>
   </nav>
+  <a class="menu-button tablet-phone" onclick="openNavMenu()" style="-webkit-mask: url(images/menu.svg); -webkit-mask-size: contain"></a>
   <div class="menu-button w-nav-button">
     <div class="w-icon-nav-menu"></div>
   </div>
@@ -28,7 +31,7 @@
 
 <div class="banner section">
   <div class="container">
-    <div class="page-title purple-text">About Us</div>
+    <div class="page-title green-text">About Us</div>
     <div class="banner-paragraph">Team Trufflin members are well-versed in studying human behavior be it from a variety of fields; our backgrounds include but are not limited to business, cognitive sciences, development, and design. Like the pig that digs for the ‘black gold’ of truffles, we are digging into the financial sphere and uprooting opportunities for Liquidnet as they delve into user research and design.</div>
   </div>
   <img src="images/about/banner-right.svg" class="bg right">
@@ -38,7 +41,7 @@
 <div class="section">
   <div class="container">
     <div class="section-title">Team Members</div>
-    <div class="section-title-line purple-bg"></div>
+    <div class="section-title-line green-bg"></div>
   </div>
 
   <!-- Emily's information -->
@@ -180,7 +183,7 @@
 <div class="section bg-light-purple">
   <div class="container">
     <div class="section-title">Snippets of Our Journey</div>
-    <div class="section-title-line purple-bg"></div>
+    <div class="section-title-line green-bg"></div>
     <div class="flex-h gallery">
       <div class="blog">
         <div class="blog-img"></div>
@@ -198,7 +201,7 @@
   </div>
   <div class="section container center">
     <div class="h2">Want to read more about our journey?</div>
-    <img class="b1 img-button" src="images/button-learn-more.png" alt="Trufflin Logo">
+    <img class="b1 img-button" src="images/buttons/learn-more.svg" alt="Trufflin Logo">
   </div>
 </div>
 
