--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
@@ -12,6 +12,7 @@
     <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="js/index.js"></script>
+    <script src="js/shared.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -24,16 +25,13 @@
         <a href="about.html">About</a>
         <a href="glossary.html" >Glossary</a>
     </nav>
-    <div class="menu-button w-nav-button">
-        <div class="w-icon-nav-menu"></div>
-    </div>
+    <a class="menu-button tablet-phone" onclick="openNavMenu()" style="-webkit-mask: url(images/menu.svg); -webkit-mask-size: contain"></a>
 </div>
 
 <div class="homepage-banner banner">
     <div class="container">
         <div class="hp-banner-title">Re-shaping a Trader’s Digital Experience</div>
         <div class="hp-banner-paragraph">Trading desks are shrinking as algorithms and trading software become a one-stop shop for liquidity and research. How will Liquidnet continue to deliver unique value to traders in both liquidity and research data?</div>
-        <a href="https://www.freepik.com/" class="banner-img-homepage"><img src="images/homepage/0-banner-illustration.svg" alt="Designed by fullvector / Freepik" class="banner-img-homepage"></a>
     </div>
 </div>
 
@@ -41,6 +39,7 @@
 <!-- Our Client -->
 <div class="section">
     <div class="container">
+        <img src="images/homepage/0-banner-illustration.svg" alt="Designed by fullvector / Freepik" class="banner-img-homepage desktop">
         <div class="homepage-subtitle">GET TO KNOW</div>
         <div class="section-title">Our Client</div>
         <div class="flex-h space-above">
@@ -87,20 +86,20 @@
         <div class="homepage-subtitle">GET TO KNOW</div>
         <div class="section-title">Our process</div>
         <img src="images/homepage/3-process-bar.svg" alt="" style="width: 800px" class="hp-process-bar">
-        <div class="flex-h">
-            <div class="w-col-4 card hp-process-card-wrapper">
+        <div class="flex-h tablet-phone-v even-wrapper">
+            <div class="card hp-process-card-wrapper">
                 <img src="images/homepage/3-process-icon1.svg" alt="" class="icon">
                 <div class="card-title red-text">Research Phase</div>
                 <div class="card-text">Our subject and generative research focused on understanding the financial sphere and the complexity of trader’s lives, particularly in institutional trading.</div>
                 <a data-aos="fade-up" href="old_research.html" class="button-solid red-bg">Read More</a>
             </div>
-            <div class="w-col-4 card hp-process-card-wrapper">
+            <div class="card hp-process-card-wrapper">
                     <img src="images/homepage/3-process-icon2.svg" alt="" class="icon">
                     <div class="card-title blue-text">Conceptual Phase</div>
                     <div class="card-text">After conducting a variety of research activities and synthesizing findings, the team defined opportunity areas and began creating design concepts.</div>
                     <a data-aos="fade-up" href="concept.html" class="button-solid blue-bg">Read More</a>
             </div>
-            <div class="w-col-4 card hp-process-card-wrapper">
+            <div class="card hp-process-card-wrapper">
                     <img src="images/homepage/3-process-icon3.svg" alt="" class="icon">
                     <div class="card-title purple-text">Design Phase</div>
                     <div class="card-text">During the summer, our team will move into designing deliverables based upon our final presentation with our clients. This will be our focus for the summer.</div>
